# cMark

./: CMakeLists.txt  Readme.md  platform.h
app/: index.html  main.js  package.json
app/css/: styles.css
app/js/: script.js
include/: device_info.h
include/db/: db_manager.h
src/: device_info.cpp  main.cpp
src/db/: db_manager.cpp
